<resources>
    <string name="app_name">Quiz</string>
    <string name="question1">Katherine seems to be a bit mean to Kunal quite a few times. In Lesson 6.9 she seems slightly sarcastic about what to poor Kunal?</string>
    <string name="answer1a">His disposable income</string>
    <string name="answer1b">How tough he is</string>
    <string name="answer1c">The amount of friends he has</string>
    <string name="answer1d">His coding skills</string>
    <string name="y">yatta</string>
    <string name="ya">yatta!</string>
    <string name="Question2">Again in Lesson 7.6 Katherine seems is a bit mean to Kunal. How did Google and Udacity allow all this workplace bullying? What event does she imply he might not have been invited to?</string>
    <string name="Answer2a">Restaurant dinner</string>
    <string name="Answer2b">Birthday Party</string>
    <string name="Answer2c">Chit chat over coffee</string>
    <string name="Answer2d">Hackathon</string>
    <string name="Question3">In Lesson 8.11 when you successfully complete the quiz, Lyla rewards you with a Japanese word, which is also the title of a popular 2001 Japanese parody song. Also a link is provided to a Youtube video of the song. Fill in the title of the song as it appears in the lesson.</string>
    <string name="Hint">2001 Japanese parody song title</string>
    <string name="Question4">Which food and drink items appear in the videos?</string>
    <string name="Answer4a">Stolichnaya vodka</string>
    <string name="Answer4b">Vegan pizza</string>
    <string name="Answer4c">Cake</string>
    <string name="Answer4d">Coffee</string>
    <string name="Question5">Probably unsurprisingly, how does Kunal say he got to work at the time the videos were recorded?</string>
    <string name="Answer5a">Car</string>
    <string name="Answer5b">Bicycle</string>
    <string name="Answer5c">Bus</string>
    <string name="Answer5d">Motorbike</string>
    <string name="Question6">Contrary to Kunal but again probably unsurprisingly, how does Katherine say she got to work at the time the videos were recorded?</string>
    <string name="Answer6a">Car</string>
    <string name="Answer6b">Bicycle</string>
    <string name="Answer6c">Bus</string>
    <string name="Answer6d">Motorbike</string>
    <string name="Question7">In which lesson does Katherine suddenly start indicating with painted nails?</string>
    <string name="Answer7a">Lesson 10.10</string>
    <string name="Answer7b">Lesson 10.20</string>
    <string name="Answer7c">Lesson 11.01</string>
    <string name="Answer7d">Lesson 11.13</string>
    <string name="Question8">In that lesson what colour are her nails?</string>
    <string name="Answer8a">Hot pink</string>
    <string name="Answer8b">Dark red</string>
    <string name="Answer8c">Purple</string>
    <string name="Answer8d">Black</string>
    <string name="Question9">Kunal wears a light blue shirt through most of the lessons but he occasionally wears one of a different colour. What colour is that one?</string>
    <string name="Answer9a">Pink</string>
    <string name="Answer9b">White</string>
    <string name="Answer9c">Dark Violet</string>
    <string name="Answer9d">Black</string>
    <string name="Question10">In one lesson Kunal mentions Chloe. What is Chloe\'s connection to Kunal?</string>
    <string name="Answer10a">Chloe is his girlfriend</string>
    <string name="Answer10b">Chloe is his plant</string>
    <string name="Answer10c">Chloe is his car</string>
    <string name="Answer10d">Chloe is his sister</string>
    <string name="your_score">\n\n\n\nsee your score</string>
    <string name="katherine_kunal_lyla">Katherine, Kunal and Lyla</string>
    <string name="scoreD">/22. Crap!</string>
    <string name="scoreC">/22. Hmmm! You probably were more focused on the coding.</string>
    <string name="scoreB">/22. Really good! If you also focused as much on the actual coding you will probably do swimmingly well in the course.</string>
    <string name="scoreA">/22. Awesome! Like me, you probably want Katherine, Kunal and Lyla action figures. And you deserve them!</string>
</resources>
